<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
         android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_navigate_before_24"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_notifications_24"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        android:layout_marginTop="10dp"

        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:background="@drawable/credit_card"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardView1"


        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/credit_card"
            tools:ignore="MissingClass">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/mastercard"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:gravity="center"

                android:text="7856 4562 7875 7412"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.325"
                tools:ignore="HardcodedText,RtlCompat" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/Expdate"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textView4"
                app:layout_constraintLeft_toRightOf="@id/textView6"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="217dp"
                tools:layout_editor_absoluteY="108dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/card_holder"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/textView7"
                app:layout_constraintStart_toStartOf="@id/textView4"
                app:layout_constraintTop_toBottomOf="@id/textView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="CARD HOLDER"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/textView6"
                app:layout_constraintEnd_toEndOf="@id/textView6"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="@id/textView6"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="EXP DATE"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/textView7"
                app:layout_constraintEnd_toEndOf="@id/textView4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintRight_toLeftOf="@id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="340dp"
        android:layout_height="160dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@id/cardView" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/creditcard2">

            <Button
                android:id="@+id/button3"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:background="@color/cardview_dark_background"
                android:text="@string/x"
                android:textSize="20sp"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toEndOf="@id/plain_text_input1"
                app:layout_constraintLeft_toRightOf="@id/plain_text_input"
               app:layout_constraintStart_toEndOf="@id/username_icon"
                tools:ignore="MissingConstraints"
                android:onClick="onClick"
                tools:layout_editor_absoluteY="2dp" />

            <EditText
                android:id="@+id/plain_text_input1"
                android:layout_width="326dp"
                android:layout_height="47dp"
                android:layout_marginTop="4dp"
                android:hint="@string/card_holder_name"
                android:inputType="textPersonName"
                android:textColor="#AAA1A1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plain_text_input"
                tools:ignore="MissingConstraints,NotSibling" />

            <EditText

                android:id="@+id/plain_text_input2"
                android:layout_width="159dp"
                android:layout_height="52dp"
                android:layout_marginTop="4dp"
                android:hint="Exp date"
                android:focusable="false"
                 android:onClick="OnClick"
                android:textColor="#AAA1A1"
                app:layout_constraintTop_toBottomOf="@id/plain_text_input1"
                tools:ignore="HardcodedText,MissingConstraints"
                app:layout_constraintStart_toStartOf="@id/plain_text_input1"
                tools:layout_editor_absoluteX="18dp" />

            <EditText
                android:id="@+id/cvv"
                android:layout_width="157dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="20sp"
                android:textColor="#AAA1A1"
                app:layout_constraintEnd_toEndOf="@id/plain_text_input1"
                app:layout_constraintLeft_toRightOf="@id/plain_text_input2"
                app:layout_constraintTop_toBottomOf="@id/plain_text_input1" />


            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="244dp"
                android:layout_height="54dp"
                android:layout_marginLeft="3dp"
                android:hint="@string/card_number"
                android:textColor="#AAA1A1"
                app:layout_constraintEnd_toEndOf="@id/plain_text_input1"
                app:layout_constraintEnd_toStartOf="@id/username_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/plain_text_input1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="2dp" />

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="40dp"
                android:layout_height="47dp"
                android:layout_alignEnd="@id/plain_text_input"
                android:padding="3dp"
                android:src="@drawable/mastercard"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/plain_text_input"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn1_stroke"
        android:text="@string/add_new_card"
        android:textAllCaps="false"
        android:textColor="#2979FF"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_rounded"
        android:textStyle="normal"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:elevation="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClick"
        tools:ignore="PrivateResource" />

</androidx.constraintlayout.widget.ConstraintLayout>